<resources>
    <string name="app_name">Hotel Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_id">User Name</string>
    <string name="password">Password</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="two_seater">Two</string>
    <string name="four_seater">Four</string>
    <string name="six_seater">Six</string>
    <string name="eight_seater">Eight</string>
    <string name="total_seats">Total Seats</string>
    <string name="fd_name">Food Name</string>
    <string name="fd_description">Food Description</string>
    <string name="fd_price">Price</string>
    <string name="save_btn">SAVE</string>
    <string name="user_login">User Login</string>
    <string name="user_nam">User Name</string>
    <string name="passwrd">Password</string>
    <string name="submit_btn">Submit</string>
    <string name="Reg_now">Register Now</string>
    <string name="newuser_registration">UserRegistration Form</string>
    <string name="newuser_name">User Name</string>
    <string name="newuser_pass">Password</string>

</resources>