<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:id="@+id/fd_name"
        android:text="@string/fd_name"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="250dp"
        android:id="@+id/fd_descript"
        android:text="@string/fd_description"
        android:textSize="30dp"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fd_price"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_marginTop="350dp"
        android:text="@string/fd_price"
        android:textSize="30dp"
        android:textColor="@color/black"/>


</RelativeLayout>

